[gd_scene load_steps=4 format=2]

[ext_resource path="res://Teste.png" type="Texture" id=1]
[ext_resource path="res://Config.png" type="Texture" id=2]
[ext_resource path="res://Node2D.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Teste" type="Sprite" parent="."]
position = Vector2( 518, 299.75 )
scale = Vector2( 0.5375, 0.552315 )
texture = ExtResource( 1 )

[node name="Config" type="Sprite" parent="Teste"]
position = Vector2( 816.744, -461.241 )
scale = Vector2( 0.609102, 0.619977 )
texture = ExtResource( 2 )

[node name="JogarButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 423.0
margin_top = 379.0
margin_right = 614.0
margin_bottom = 456.0

[node name="SairButton2" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 430.0
margin_top = 479.0
margin_right = 621.0
margin_bottom = 569.0

[node name="ConfigButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 920.0
margin_top = 17.0
margin_right = 1001.0
margin_bottom = 65.0

[connection signal="pressed" from="JogarButton" to="." method="_on_JogarButton_pressed"]
[connection signal="pressed" from="SairButton2" to="." method="_on_SairButton2_pressed"]
[connection signal="pressed" from="ConfigButton" to="." method="_on_ConfigButton_pressed"]
